tests/baselines/reference/paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.errors.txt
paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.ts(25,23): error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ x?: 123[] | undefined; }'.
  Types of property 'x' are incompatible.
    Type 'number[] | undefined' is not assignable to type '123[] | undefined'.
      Type 'number[]' is not assignable to type '123[]'.
        Type 'number' is not assignable to type '123'.
paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.ts(26,23): error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ y?: "bar"[] | undefined; }'.
  Types of property 'y' are incompatible.
    Type 'string[] | undefined' is not assignable to type '"bar"[] | undefined'.
      Type 'string[]' is not assignable to type '"bar"[]'.
        Type 'string' is not assignable to type '"bar"'.
paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.ts(27,23): error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ y?: 12[] | undefined; }'.
  Types of property 'y' are incompatible.
    Type 'string[] | undefined' is not assignable to type '12[] | undefined'.
      Type 'string[]' is not assignable to type '12[]'.
        Type 'string' is not assignable to type '12'.
paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.ts(28,23): error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ x?: "no"[] | undefined; }'.
  Types of property 'x' are incompatible.
    Type 'number[] | undefined' is not assignable to type '"no"[] | undefined'.
      Type 'number[]' is not assignable to type '"no"[]'.
        Type 'number' is not assignable to type '"no"'.


==== paramsOnlyHaveLiteralTypesWhenAppropriatelyContextualized.ts (4 errors) ====
    // Using a homomorphic mapped type over `T`
    // Produces a lower-priority inference for `T` than other
    // positions, allowing one to override the priority the argument
    // order would usually imply
    type Lower<T> = { [K in keyof T]: T[K] };
    
    export function appendToOptionalArray<
      K extends string | number | symbol,
      T
    >(
      object: { [x in K]?: Lower<T>[] },
      key: K,
      value: T
    ) {
      const array = object[key];
      if (array) {
        array.push(value);
      } else {
        object[key] = [value];
      }
    }
    
    // e.g.
    const foo: {x?: number[]; y?: string[]; } = {};
    appendToOptionalArray(foo, 'x', 123);   // ok
                          ~~~
!!! error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ x?: 123[] | undefined; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type 'number[] | undefined' is not assignable to type '123[] | undefined'.
!!! error TS2345:       Type 'number[]' is not assignable to type '123[]'.
!!! error TS2345:         Type 'number' is not assignable to type '123'.
    appendToOptionalArray(foo, 'y', 'bar'); // ok
                          ~~~
!!! error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ y?: "bar"[] | undefined; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type 'string[] | undefined' is not assignable to type '"bar"[] | undefined'.
!!! error TS2345:       Type 'string[]' is not assignable to type '"bar"[]'.
!!! error TS2345:         Type 'string' is not assignable to type '"bar"'.
    appendToOptionalArray(foo, 'y', 12);    // should fail
                          ~~~
!!! error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ y?: 12[] | undefined; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type 'string[] | undefined' is not assignable to type '12[] | undefined'.
!!! error TS2345:       Type 'string[]' is not assignable to type '12[]'.
!!! error TS2345:         Type 'string' is not assignable to type '12'.
    appendToOptionalArray(foo, 'x', "no");  // should fail
                          ~~~
!!! error TS2345: Argument of type '{ x?: number[] | undefined; y?: string[] | undefined; }' is not assignable to parameter of type '{ x?: "no"[] | undefined; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type 'number[] | undefined' is not assignable to type '"no"[] | undefined'.
!!! error TS2345:       Type 'number[]' is not assignable to type '"no"[]'.
!!! error TS2345:         Type 'number' is not assignable to type '"no"'.